utils: Load Xcursor themes using QFile

This improves the integration of the XcursorTheme class with the rest of
the Qt ecosystem, for example it should be possible to load cursor themes
from Qt resources.

BUG: 489241

(cherry picked from commit 586a775d5b65dc14458f6e861515f9f9b35f6cad)